--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,3 @@
-# Directories
-bin/
-obj/
-disk0/
-.vscode/
-
 # Prerequisites
 *.d
 
@@ -12,6 +6,9 @@ disk0/
 *.ko
 *.obj
 *.elf
+bin/
+obj/
+disk0/
 
 # Linker output
 *.ilk
@@ -56,3 +53,7 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+.vscode/
+
+qemu.sh
